k8s-cas.yaml
apiVersion: v1
kind: Service
metadata:
  name: cas
spec:
  type: NodePort
  ports:
    - port: 8080
      nodePort: 20000
  selector:
    app: cas
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cas
spec:
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: cas
  template:
    metadata:
      labels:
        app: cas
    spec:
      containers:
      - name: cas
        image: 172.29.0.13:8082/cas:<BUILD_TAG>
        imagePullPolicy: Always
        volumeMounts:
        - name: time-zone
          mountPath: /etc/localtime
        - name: tomcat-logs
          mountPath: /usr/local/tomcat/logs
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-secret
      volumes:
      - name: time-zone
        hostPath:
          path: /etc/localtime
      - name: tomcat-logs
        hostPath:
          path: /data/tomcat/logs
