ingress-cas-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-cas-tls
  namespace: default
spec:
  tls:
  - hosts:
    - framework.centit.com
    secretName: nginx-test
  rules:
  - host: framework.centit.com
    http:
      paths:
      - path: /cas
        backend: 
          serviceName: cas
          servicePort: 8080
